# SmartDoc

./: .gitignore  AGENT.md  docker-compose.auth.yml
.github/workflows/: tauri-build.yml
app/: Cargo.toml  README.md
app/src/: lib.rs  main.rs
app/static/: index.html
docs/: agents-plan.md  architecture.md  development.md  requirements.md
docs/deployment/: mac-packaging.md
docs/investigation/: README.md  auth.md  desktop-framework.md
docs/plan/: tasks.md
docs/tests/: desktop.md  public-services.md
scripts/: build-frontend.sh
services/api/: Dockerfile  README.md  requirements.txt
services/api/app/: config.py  db.py  entities.py  main.py  models.py  repository.py  routes_auth.py  routes_users.py  schemas.py  services.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
